trunk/tests/kiama/negative/name_errors/L2/7_casename1.ob
MODULE casename;

VAR
    bvar : INTEGER;

BEGIN
    CASE avar OF
        1 : bvar := 2
    END
END casename.
